# python-package-template-hatch

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
scripts/: test.sh
