[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yourpkg"
description = ""
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = ""
Homepage = ""

[project.optional-dependencies]
test = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-describe==2.1.0",
  "pytest-mock==3.12.0",
  "mypy==1.7.0",
  "flake8==6.1.0",
  "isort==5.12.0",
  "black==23.10.1",
]
stub = []
doc = []

[tool.hatch.version]
path = "src/yourpkg/__init__.py"

[tool.hatch.envs.test]
features = ["test", "stub"]

[tool.hatch.envs.test.scripts]
test = "scripts/test.sh {args}"
format = "scripts/format.sh {args}"
lint = "scripts/lint.sh {args}"

[tool.hatch.envs.doc]
features = ["doc"]

[tool.hatch.envs.doc.scripts]

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=yourpkg"
