[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yourpkg"
description = ""
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wasedatakeuchilab/python-package-template-hatch"
Homepage = "https://github.com/wasedatakeuchilab/python-package-template-hatch"
Repository = "https://github.com/wasedatakeuchilab/python-package-template-hatch"

[project.optional-dependencies]
test = [
  "mypy==1.10.0",
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "pytest-describe==2.2.0",
  "pytest-mock==3.14.0",
]

[tool.hatch.version]
path = "src/yourpkg/__init__.py"

[tool.hatch.envs.default]
features = ["test"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
test-doc = "pytest --doctest-modules src {args}"
check-type = "mypy src tests {args}"

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=yourpkg"

[tool.ruff]
lint.select = [
  "E",
  "F",
  "W",
  "I",
]
